--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@types/jsonwebtoken": "^9.0.3",
+    "axios": "^1.5.1",
     "cloudinary": "^1.41.0",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -20,6 +21,7 @@
     "react-dom": "latest"
   },
   "devDependencies": {
+    "@grafbase/sdk": "^0.6.3",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
