--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "axios": "^1.5.1",
     "cloudinary": "^1.41.0",
+    "encoding": "^0.1.13",
     "graphql-request": "^6.1.0",
     "jsonwebtoken": "^9.0.2",
     "next": "latest",
